--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,5 @@
 <h1>Task Details</h1>
 <h2><%= @task.name %></h2>
 <p><%= @task.details %></p>
+
+<%= link_to 'Back to Task List', index_path %></label><br>
