completed CRUD model for Task List

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,10 @@
 <h1>Task Details</h1>
 <h2><%= @task.name %></h2>
 <p><%= @task.details %></p>
+<p>Completed: <%= @task.completed %></p>
+<%= link_to "Delete task",
+  tasks_path(@task),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+%>
 
-<%= link_to 'Back to Task List', index_path %></label><br>
+<%= link_to 'Back to Task List', tasks_path %></label><br>
